Fixed 1.15.2 (vanilla, modloaders have not been tested), added 'or' statements in mod dependency checking